Checkin: Code refactor by findBugs tool